refactor: upload-button.tsx